--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       type="text/css"
     />
+     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 <body>
     
